Bug 129355 - Untranslatable TOC Index key previews
Summary: Untranslatable TOC Index key previews
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
6.3.3.2 release
Hardware: x86 (IA32) Windows (All)
: medium trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-12 21:36 UTC by Marek
Modified: 2019-12-17 13:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
incorrect translation in table of content (34.20 KB, image/png)
2019-12-12 21:38 UTC, Marek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marek 2019-12-12 21:36:47 UTC
Description:
In a Table of Content there is an "Entry" Instead of Nagłówek -> In Polish

Steps to Reproduce:
1.Input a new Table of content
2.
3.

Actual Results:
1.Input a new Table of content

Expected Results:
correct translation to Polish


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Marek 2019-12-12 21:38:41 UTC
Created attachment 156529 [details]
incorrect translation in table of content
Comment 2 Julien Nabet 2019-12-13 11:11:36 UTC
It's not specific to Polish language, 
English US shows:
Heading 1...............
   Heading 1.1..........
Entry...................
   Heading 1.2..........

KeyId shows just "Entry" too.

Code pointer here https://opengrok.libreoffice.org/xref/core/sw/source/uibase/utlui/unotools.cxx?r=94715082#331 but don't know what there should be here since I would rather imagine:
Heading 1...............
   Heading 1.1..........
   Heading 1.2..........
Heading 2...............
   Heading 2.1..........
   Heading 2.2..........
etc.
Comment 3 Julien Nabet 2019-12-13 22:19:05 UTC
Xisco: wonder if it could be related to https://cgit.freedesktop.org/libreoffice/core/commit/?id=389491aedd659a3c4b24b9902b6cb54075874d3e. Perhaps a bisect/bibisect may help here?
Comment 4 Marek 2019-12-14 21:33:20 UTC
In English:

Table of Content
Heading 1...............
   Heading 1.1..........
   Heading 1.2..........
Heading 2...............
   Heading 2.1..........
   Heading 2.2..........
etc.

In Polish:

Spis treści
Nagłówek 1..............
  Nagłówek 1.1..........
  Nagłówek 1.2..........
Nagłówek 2..............
  Nagłówek 2.1..........
  Nagłówek 2.2..........

This looks good for me :)
Comment 5 Julien Nabet 2019-12-14 22:04:34 UTC
Xisco: is it ok for you or should we ping some other people?
Comment 6 Xisco Faulí 2019-12-16 10:59:41 UTC
(In reply to Julien Nabet from comment #3)
> Xisco: wonder if it could be related to
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=389491aedd659a3c4b24b9902b6cb54075874d3e. Perhaps a bisect/bibisect may
> help here?

I can't bisect this kind of issues, bisect repos doesn't have other languages than English.

@Caolán, any idea ?
Comment 7 Caolán McNamara 2019-12-16 12:39:01 UTC
I think it was always like this, but I think I can do something about it
Comment 8 Commit Notification 2019-12-16 15:09:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4ebde6f969f0c774586fda46890075ea39d1f942

Resolves: tdf#129355 mark toc index marks translatable

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-12-17 13:33:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/4d08e9783127931238a7d6bfba3ad1fa051b8aa2

Resolves: tdf#129355 mark toc index marks translatable

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.