Resolves: tdf#129355 mark toc index marks translatable

Change-Id: I039c5fb47ff65b0b1646f28b096ca1ae66e4bc72
Reviewed-on: https://gerrit.libreoffice.org/85215
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 4ebde6f969f0c774586fda46890075ea39d1f942)
Reviewed-on: https://gerrit.libreoffice.org/85287
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>